Attempt to fix up top spacing for site with/without slider/feature menu.

--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -1,7 +1,7 @@
-/* GSHSS Slider CSS. */
+/* FoA Slider CSS. */
 
 #slider {
-  padding-top: 5px;
+  padding-top: 36px;
 
   .col-2 {
     width: 240px;
